# thanatos-ui

./: .dockerignore  .gitignore  .pylintrc  CONTRIBUTING.md  README.md  mkdocs.yml  package.json  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  Dockerfile.app  Dockerfile.db  Dockerfile.dbadmin  devcontainer.env  devcontainer.json  docker-compose.yml  init.json  init.sql
api/accounts/: serializers.py  urls.py  views.py
api/accounts/tests/: test_accounts_api.py
api/core/: admin.py  models.py
api/core/fixtures/: data.json
api/core/management/commands/: wait_for_db.py
api/core/migrations/: 0001_initial.py  0002_account.py  0003_primarymetric_secondarymetric_tertiarymetric.py  0004_question.py
api/core/tests/: test_admin.py  test_commands.py  test_models.py
api/main/: settings.py  urls.py
api/metrics/: serializers.py  urls.py  views.py
api/metrics/tests/: test_primary_metrics.py  test_secondary_metrics.py  test_tertiary_metrics.py
api/questions/: serializers.py  urls.py  views.py
api/questions/tests/: test_questions_api.py
api/user/: serializers.py  urls.py  views.py
api/user/tests/: test_user_api.py
docs/: contributing.md  index.md
docs/code/: core-models.md
docs/contributing/: getting-started.md  using-the-repo.md
src/: App.tsx
ui/: package-lock.json  package.json
ui/public/: index.html
