[tool.poetry]
name = "thanatos"
version = "0.1.0"
description = "Codename: Thanatos"
authors = ["Pat McLean <github@psmware.ie>"]
license = "AGPL3-only"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
